# operatum-mempalace-bridge

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
src/: main.py
src/adapters/: chroma_palace.py  kg_adapter.py
src/routes/: drawers.py  health.py  kg.py  search.py  wings.py
tests/: conftest.py  test_drawers.py  test_health.py  test_kg.py  test_search.py  test_wings.py
